wwwroot/css/topBar.css
.top-bar {
    background-color: #FFFFFF;
    width: 100%;
    text-align: center;
}

.top-bar ul {
    background-color: #FFFFFF;
    display: inline-block;
    text-align: center;
    transform: translateY(70%);
}

@media (max-width: 1050px){
    .top-bar ul {
        transform: translateY(30%);
    }

    .top-bar .float-right {
        float:none !important;
    }

    .top-bar .float-left{
        float:none !important;
        
    }
}

.title {
    font-size: 40px;
    height:80%;
    margin: auto;
    vertical-align: middle;
    text-align: center;
    padding-left: 0px;
    padding-right: 0px;
}

.title span{
    color: #FF0000;
    margin-left: 5px;
    margin-right: 5px;
}

.karla li a {
    text-decoration: none;
    color: #000000;
    font-size:20px;
    vertical-align: middle;
    display: inline;
}

.top-bar ul li a:hover{
    background-color: #f0f0f0;
}

